# bca2p

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  benchmark_spec.md  datasets.md  leaderboard.md  plan.md  pyproject.toml
docs/api/: README.md  core.md  distributed.md  graph.md  langchain.md  langgraph.md  learning.md  marl.md  native.md  observability.md  registry.md  runtime.md  sim.md  transport.md
docs/guides/: README.md  causal-feedback.md  cell-simulation.md  core-api.md  distributed-substrate.md  getting-started.md  graph-builder.md  langchain-integration.md  langgraph-integration.md  marl-training.md  migration.md  observability.md  release-candidate.md  runtime-checkpointing.md  transport-a2a.md
examples/: __init__.py  benchmark_harness.py
examples/benchmarks/: README.md  __init__.py  app.py  gemini.py  models.py  render.py  runners.py  scenarios.py  scoring.py
examples/cell_simulation/: README.md  __init__.py  app.py
examples/distributed_mesh/: README.md  __init__.py  app.py
examples/langchain_support_swarm/: README.md  __init__.py  app.py  standard.py
examples/langgraph_research_swarm/: README.md  __init__.py  app.py  standard.py
examples/marl_training/: README.md  __init__.py  app.py
examples/native_runtime/: README.md  __init__.py  app.py
reports/: benchmark_summary.md
src/bca2p/: __init__.py
src/bca2p/core/: __init__.py  base.py  enums.py  exceptions.py  models.py
src/bca2p/distributed/: __init__.py  models.py
src/bca2p/graph/: __init__.py  builder.py  channels.py  exceptions.py  models.py  nodes.py
src/bca2p/integrations/: __init__.py
src/bca2p/integrations/langchain/: __init__.py  middleware.py
src/bca2p/integrations/langgraph/: __init__.py  adapter.py
src/bca2p/learning/: __init__.py  exceptions.py  models.py  store.py
src/bca2p/marl/: __init__.py  models.py  trainer.py
src/bca2p/native/: __init__.py  runtime.py
src/bca2p/observability/: __init__.py  diagnostics.py  models.py  recorder.py
src/bca2p/registry/: __init__.py  catalog.py  store.py
src/bca2p/runtime/: __init__.py  checkpoint.py  engine.py  exceptions.py  models.py
src/bca2p/sim/: __init__.py  models.py
src/bca2p/transport/: __init__.py  a2a.py  base.py
tests/experimental/: test_cell_simulation.py  test_distributed_substrate.py  test_marl_training.py  test_phase1_layout.py
tests/fixtures/: README.md
tests/integration/: test_repo_layout.py
tests/integration/examples/: test_coordination_benchmarks.py  test_examples_and_benchmarks.py
tests/integration/runtime/: test_runtime.py
tests/integration/transport/: test_transport_registry.py
tests/unit/: test_package.py
tests/unit/core/: test_models.py
tests/unit/graph/: test_builder.py
tests/unit/integrations/: test_langchain_middleware.py  test_langgraph_adapter.py
tests/unit/learning/: test_store.py
tests/unit/observability/: test_recorder.py
